--- a/enjoytrip-api/src/main/resources/application.properties
+++ b/enjoytrip-api/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.driverClassName=org.mysql.cj.jdbc.Driver
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/enjoytrip?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=ssafy
 spring.datasource.password=ssafy
