--- a/enjoytrip-api/build.gradle
+++ b/enjoytrip-api/build.gradle
@@ -8,7 +8,7 @@ group = 'com.ssafy'
 version = '0.0.1-SNAPSHOT'
 
 java {
- sourceCompatibility = '17'
+	sourceCompatibility = '17'
 }
 
 configurations {
@@ -26,6 +26,9 @@ dependencies {
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.3.1'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'com.mysql:mysql-connector-j'
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
