--- a/enjoytrip-api/src/main/resources/application.properties
+++ b/enjoytrip-api/src/main/resources/application.properties
@@ -2,3 +2,18 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/enjoytrip?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=ssafy
 spring.datasource.password=ssafy
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+springdoc.packages-to-scan=com.ssafy.enjoytrip
+springdoc.api-docs.version=openapi-3-0
+springdoc.swagger-ui.path=/api-docs
+springdoc.swagger-ui.tags-sorter=alpha
+springdoc.swagger-ui.operations-sorter=alpha
+springdoc.api-docs.path=/api-docs/json
+springdoc.api-docs.groups.enabled=true
+springdoc.cache.disabled=true
+springdoc.default-consumes-media-type=application/json;charset=UTF-8
+springdoc.default-produces-media-type=application/json;charset=UTF-8
+
+# 서버 킬 때마다 디비 초기화 후 자동 생성
+spring.jpa.hibernate.ddl-auto: create
