--- a/enjoytrip-api/build.gradle
+++ b/enjoytrip-api/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
+	implementation 'io.jsonwebtoken:jjwt:0.12.3'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
