--- a/enjoytrip-front/package.json
+++ b/enjoytrip-front/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "axios": "^1.6.2",
     "pinia": "^2.1.7",
+    "vee-validate": "^4.11.8",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
+    "vue-validate": "^1.0.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
