add: board something etc

--- a/enjoytrip-api/src/main/resources/application.properties
+++ b/enjoytrip-api/src/main/resources/application.properties
@@ -16,7 +16,7 @@ springdoc.default-consumes-media-type=application/json;charset=UTF-8
 springdoc.default-produces-media-type=application/json;charset=UTF-8
 
 # 서버 킬 때마다 디비 초기화 후 자동 생성
-spring.jpa.hibernate.ddl-auto: create
+#spring.jpa.hibernate.ddl-auto: create
 jwt.salt="ssafy"
 jwt.access-token.expiretime=3600000
 jwt.refresh-token.expiretime=86400000
